# src/app/db/models/index.ts
@@ -4,10 +4,12 @@ export { default as Word } from './Word';
 export { default as Lecture } from './Lecture';
 export { default as Question } from './Question';
 export { default as Exam } from './Exam';
+export { default as ExamAttempt } from './ExamAttempt';
 
 // 🔄 Re-exportar interfaces para uso externo
 export type { IUser } from './User';
 export type { IWord } from './Word';
 export type { ILecture } from './Lecture';
 export type { IQuestion } from './Question';
-export type { IExam } from './Exam'; 
+export type { IExam } from './Exam';
+export type { IExamAttempt } from './ExamAttempt'; 
